0.482 2023-08-22
  [Changes]
    * The ioctl method is added to the Sys::IO class.
    * The FIONBIO method is added to the Sys::IO::Contant class.
    * The ioctlsocket method is added to the Sys::Socket class.
  [Deprecation]
    * The Sys::Ioctl class is deprecated.
    * The Sys::Ioctl::Constant class is deprecated.

0.481008 2023-07-12
  [Internal Changes]
    * Only internal changes were done.
    
0.481007 2023-06-30
  [Prerequirement Changes]
    * SPVM 0.989017+ is required.
0.481006 2023-06-26
  [Prerequirement Changes]
    * SPVM 0.989012+ is required.
0.481005 2023-06-08
  [Prerequirement Changes]
    * SPVM 0.989002+ is required.
0.481004 2023-05-29
  [Prerequirement Changes]
    * SPVM 0.986+ is required.
0.481003 2023-05-23
  [Prerequirement Changes]
    * SPVM 0.981+ is required.
0.481002 2023-05-23
  [Changes]
    * Internal changes only.
0.481001 2023-05-10
  [Prerequirement Changes]
    * SPVM 0.976+ is required.
    * SPVM::Resource::SocketUtil 1.001+ is required.
0.481 2023-05-09
  [Incompatible Changes]
    * The definition of the defined method in the Sys::OS class is changed.
      [Before]
      static method defined : int ($macro_name : string, $value = undef : object of Int|Long|Double);
      [After]
      static method defined : int ($macro_name : string, $value_ref = undef : object of int[]|long[]|double[])
    * The definition of the ioctl method in the Sys::Ioctl class is changed.
      [Before]
      static method ioctl : int ($fd : int, $request : int, $request_arg = undef : object of Byte|Short|Int|Long|Float|Double|object);
      [After]
      static method ioctl : int ($fd : int, $request : int, $request_arg_ref = undef : object of byte[]|short[]|int[]|long[]|float[]|double[]|object);
    * The definition of the fcntl method in the Sys::IO class is changed.
      [Before]
      static method fcntl : int ($fd : int, $command : int, $command_arg = undef : object of Byte|Short|Int|Long|Float|Double|Sys::IO::Flock|object);