@@ -3,6 +3,8 @@ class TestCase::Sys {
   use Sys::IO;
   use Sys::OS;
   use Sys::IO::Constant as IO;
+  use Sys::Socket::Constant as SOCKET;
+  use TestUtil::SocketAutoClose;
 
   static method A : int () {
 
@@ -728,6 +730,40 @@ class TestCase::Sys {
       }
       unless (Fn->contains($@, "foo_new.txt")) {
         return 0;
+      }
+    }
+    
+    return 1;
+  }
+  
+  static method ioctl : int () {
+    # Socket
+    my $socket = Sys::Socket->socket(SOCKET->AF_INET, SOCKET->SOCK_STREAM, 0);
+    
+    unless ($socket> 0) {
+      return 0;
+    }
+
+    # Close socket at the end of this scope
+    my $socket_auto_close = TestUtil::SocketAutoClose->new($socket);
+    
+    my $value_ref = [1];
+    my $status_ioctl = 0;
+    eval { $status_ioctl = Sys->ioctl($socket, IO->FIONBIO, $value_ref); };
+    
+    if (Sys::OS->is_windows) {
+      unless ($status_ioctl == 0) {
+        return 0;
+      }
+    }
+    else {
+      if ($@) {
+        warn "[Test Output]$@";
+      }
+      else {
+        unless ($status_ioctl == 0) {
+          return 0;
+        }
       }
     }
     
